--- a/CustomTableViewCellDemo/DataTableViewCell.xib
+++ b/CustomTableViewCellDemo/DataTableViewCell.xib
@@ -10,32 +10,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="97" id="KGk-i7-Jjw" customClass="DataTableViewCell" customModule="CustomTableViewCellDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="99" id="KGk-i7-Jjw" customClass="DataTableViewCell" customModule="CustomTableViewCellDemo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wfa-ra-ABH">
-                        <rect key="frame" x="8" y="8" width="304" height="81"/>
+                        <rect key="frame" x="115" y="8" width="197" height="84"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Eh-SQ-sWJ">
+                        <rect key="frame" x="8" y="8" width="99" height="84"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="99" id="EvV-Tp-uy0"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="5Eh-SQ-sWJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5zs-i0-y0J"/>
                     <constraint firstItem="Wfa-ra-ABH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="97v-36-sd6"/>
+                    <constraint firstAttribute="bottom" secondItem="5Eh-SQ-sWJ" secondAttribute="bottom" constant="8" id="Fdj-ed-cm2"/>
                     <constraint firstAttribute="trailing" secondItem="Wfa-ra-ABH" secondAttribute="trailing" constant="8" id="FwF-9C-rsA"/>
+                    <constraint firstItem="Wfa-ra-ABH" firstAttribute="leading" secondItem="5Eh-SQ-sWJ" secondAttribute="trailing" constant="8" id="NYh-x9-qmT"/>
+                    <constraint firstItem="5Eh-SQ-sWJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="rap-Lz-lwj"/>
                     <constraint firstAttribute="bottom" secondItem="Wfa-ra-ABH" secondAttribute="bottom" constant="8" id="sMu-ce-twb"/>
-                    <constraint firstItem="Wfa-ra-ABH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="seB-he-cbT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="img" destination="5Eh-SQ-sWJ" id="IiI-KY-AjR"/>
                 <outlet property="lblData" destination="Wfa-ra-ABH" id="Jpz-e2-lKY"/>
             </connections>
-            <point key="canvasLocation" x="129.7709923664122" y="7.394366197183099"/>
+            <point key="canvasLocation" x="129.7709923664122" y="8.4507042253521139"/>
         </tableViewCell>
     </objects>
 </document>
